# pinktrace

./: .gitignore  .gitmodules  .gitreview  .mailmap  COPYING  CREDITS.in  INSTALL-git.md  Makefile.am  README-configure  README.markdown  README.md  configure.ac  index.html  read.c  system.h.in  write.c
.builds/: arm64-debian-sid.yml  x86_64-alpine-edge.yml.disabled  x86_64-alpine-oldest.yml  x86_64-archlinux.yml  x86_64-debian-oldstable.yml.disabled  x86_64-fedora-rawhide.yml
doc/: Makefile.am  config.toml.in
doc/api/: Makefile.am
doc/api/c/: Makefile.am  doxygen.conf.in
doc/api/python/: Makefile.am
doc/content/about/: _index.md
doc/content/about/background/: _index.md
doc/content/about/description/: _index.md
doc/content/bugs/: _index.md
doc/content/bugs/author/: _index.md
doc/content/bugs/copying/: _index.md
doc/content/bugs/links/: _index.md
doc/content/examples/: _index.md
doc/content/examples/c/: _index.md
doc/content/examples/c/about/: _index.md
doc/content/examples/c/fork/: _index.md
doc/content/examples/c/simple-strace/: _index.md
doc/content/install/: _index.md
doc/content/install/compile/: _index.md
doc/content/install/download/: _index.md
doc/content/install/git/: _index.md
doc/content/portability/: _index.md
doc/content/portability/YAMA/: _index.md
doc/content/portability/arch/: _index.md
docs/: Makefile.am  conf.py  index.rst
easy/: attach.c
examples/: pink-fork.c  pink-simple-strace.c
misc/: prep-env-musl.sh  prep-env.sh
pinktrace/: Makefile.am  TODO  abi.c  abi.h  about.h.in  compat.h  compiler.h  event.c  event.h  name.c  name.h  pink.h  pinktrace-check.c  pinktrace-check.h  pipe-TEST.c  pipe.c  pipe.h  private.h  read-TEST.c  read.c  read.h  regset.c  regset.h  seatest.h  socket-TEST.c  socket.c  socket.h  system.h.in  trace-TEST.c  trace.c  trace.h  vm-TEST.c  vm.c  vm.h  write-TEST.c  write.c  write.h
pinktrace/linux/: Makefile.am  errnoent.h
pinktrace/linux/aarch64/: errnoent1.h  signalent1.h  syscallent.h
pinktrace/linux/arm/: syscallent.h
pinktrace/linux/i386/: syscallent.h
pinktrace/linux/ia64/: syscallent.h
pinktrace/linux/powerpc/: syscallent.h
pinktrace/linux/x32/: syscallent.h
pinktrace/linux/x86_64/: syscallent.h
pkg-config/: Makefile.am  pinktrace.pc.in
python/: COPYING  Makefile.am  renumber-test.py
python/pinktrace/: Makefile.am  __init__.py.in  __main__.py  py-abi.c  py-event.c  py-name.c  py-pink.h  py-regset.c  py-system.c  py-trace.c  test.py  test.py.in
